--- a/src/index.css
+++ b/src/index.css
@@ -1,69 +1,76 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Poppins:wght@400;500;600;700;800&family=Roboto:wght@400;500;700;900&display=swap');
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  @apply bg-[#f68f78]
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+/* Styling to change the appearance of the scroll bars */
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+/* Track */
+::-webkit-scrollbar-track {
+  background: transparent;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #c78a5c;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-track-piece {
+  background: transparent;
+}
+
+
+
+.rotate {
+  transform: rotate(90deg);
+}
+
+.trans {
+  transition: all ease .2s;
+}
+
+.shadowed {
+  text-shadow: 0px 0px 6px rgba(255, 255, 255, 0.5);
+}
+
+.filtered {
+  filter: blur(5px);
+}
+
+.poppins {
+  font-family: 'Poppins', sans-serif;
+  ;
+}
+
+.prop{
+  background: url(./assets/hero-11-66742-scaled.jpg) no-repeat center ;
+  background-size: cover;
+}
+
+.shape{
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 100%;
+  position: relative;
+  
+}
+.home{
+  background: linear-gradient(to bottom,
+        #fef6f5 0%,
+        #fef6f5 50%,
+        #f68f78 50%,
+        #f68f78 100%);
 }
